@@ -116,6 +116,9 @@ A:hover	{ color: #202020; }
 	  color: red; 
 	  font-size: 12px; 
 	}
+.attention /* voting instructiosn */
+	{
+	}
 .headbox  /* box around the page headers */
 	{
 	}
@@ -155,6 +158,15 @@ A:hover	{ color: #202020; }
 .bread  /* used in breadcrumb bars */
 	{ 
 	  font-size: 10px; 
+	}
+.bordertop
+	{
+	}
+.borderright
+	{
+	}
+.borderleft
+	{
 	}
 .fineprint  /* used for fine print */
 	{ 
