@@ -120,6 +120,9 @@ A:hover	{ color: #C0C0C0; }
 	  color: red; 
 	  font-size: 12px; 
 	}
+.attention /* voting instructions */
+	{
+	}
 .headbox  /* box around the page headers */
 	{
 	}
@@ -162,6 +165,15 @@ A:hover	{ color: #C0C0C0; }
 .bread  /* used in breadcrumb bars */
 	{ 
 	  font-size: 10px; 
+	}
+.bordertop
+	{
+	}
+.borderright
+	{
+	}
+.borderleft
+	{
 	}
 .fineprint  /* used for fine print */
 	{ 
